--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@inertiajs/react": "^1.0.3",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
 }
