--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@inertiajs/progress": "^0.2.7",
         "@inertiajs/react": "^1.0.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
